# panel-twin-modeller

./: .gitignore  README.md  guiding-doc.txt  pyproject.toml
.github/workflows/: pages.yml
benchmarks/: benchmarks.yaml
configs/: attitude_profile.yaml  base.yaml  federal_high_risk.yaml  incentivized_profile.yaml  optimistic.yaml  pessimistic.yaml  scaleup_national.yaml  self_report_profile.yaml  topic_module_template.yaml
demo/: demonstration.md
docs/: business_economics_audit.md  design_decisions.md  external_reference_defaults.md  index.html  modularity_audit.md
docs-app/: index.html  package-lock.json  package.json  vite.config.ts
docs-app/src/: App.css  App.tsx  index.css
docs-app/src/components/: BenchmarksTab.tsx  CostTab.tsx  QualityTab.tsx  (+5 more)
pilot_logs/: runA.csv  template_response_modes.csv
scripts/: playwright_ui_audit.py  prepare_public_repo.py  run_pytests_stable.py
tests/: conftest.py  test_benchmark_integration.py  test_benchmark_schema.py  test_calibration.py  test_cli_contracts_extended.py  test_cli_integration.py  test_cost_quality_revenue.py  test_mc_regression.py  test_model_properties.py  test_pilot_calibration_response_modes.py  test_sampling_model.py  test_webapp_smoke.py
twin_econ/: __init__.py  benchmark_model.py  cli.py  competition_model.py  cost_model.py  deliverables_model.py  mc_model.py  params.py  pilot_calibration.py  product_model.py  quality_model.py  reporting.py  revenue_model.py  sampling_model.py
webapp/: ACCESSIBILITY_CHECKLIST.md  CITATIONS.md  README.md  app.py
webapp/visual_baseline/: baseline_manifest.json
(+19 files in other folders)
